--- a/Module2Asignment/index.html
+++ b/Module2Asignment/index.html
@@ -1,1 +1,37 @@
+<!doctype html>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="Module2Asst1.css">
+	<!--Google font link-->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&family=Lexend:wght@200&family=M+PLUS+Rounded+1c:wght@700&display=swap" rel="stylesheet">
+	<title>Our Menu</title>
+</head>
+<body>
+	<h1> Our Menu </h1>
 
+	<div class="row">
+		<div class="col-lg-4 col-md-6 col-sm-12 " id="p1pos">
+			<h3 id="P1title">Chicken</h3>
+			<p>Chicken: It's what's for dinner. We've all heard it, and it's true: chicken breasts, thighs (our favorite cut), or even a whole bird all have a spot on our kitchen table. Unfortunately, that can mean falling into a dinner rut much too easily for our liking. If you’re like us and just can’t bear to make your (or your family’s) old standbys.</p>
+			</div>
+
+		<div class="col-lg-4 col-md-6 col-sm-12 ">
+			<h3 id="P2title">Beef</h3>
+			<p>Beef: It's definitely what's for dinner tonight. If you've found yourself in an inevitable cooking rut (or reaching for the takeout menu), searing up a juicy steak, simmering chuck roast in a massaman curry, or even just frying up a classic cheeseburger will quickly liven up any weeknight.So many cuts to consider, we have beef recipes.</p>
+		</div>
+			
+		<div class="col-lg-4 col-md-12 col-sm-12">
+
+		    <h3 id="P3title">Sushi</h3>
+			<p>Sushi, a staple rice dish of Japanese cuisine, consisting of cooked rice flavoured with vinegar and a variety of vegetable, egg, or raw seafood garnishes and served cold. Restaurants specializing in sushi abound in Japan, where subtleties of preparation find a discriminating clientele, and the dish has gained popularity </p>
+
+		</div>
+	</div>
+
+	</body>
+	</html>
