--- a/Module2Asignment/index.html
+++ b/Module2Asignment/index.html
@@ -9,13 +9,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&family=Lexend:wght@200&family=M+PLUS+Rounded+1c:wght@700&display=swap" rel="stylesheet">
-	<title>Our Menu</title>
+	<title>Module2 Assignment Solution</title>
 </head>
 <body>
 	<h1> Our Menu </h1>
 
 	<div class="row">
-		<div class="col-lg-4 col-md-6 col-sm-12 " id="p1pos">
+		<div class="col-lg-4 col-md-6 col-sm-12 ">
 			<h3 id="P1title">Chicken</h3>
 			<p>Chicken: It's what's for dinner. We've all heard it, and it's true: chicken breasts, thighs (our favorite cut), or even a whole bird all have a spot on our kitchen table. Unfortunately, that can mean falling into a dinner rut much too easily for our liking. If you’re like us and just can’t bear to make your (or your family’s) old standbys.</p>
 			</div>
