--- a/Module2Asignment/index.html
+++ b/Module2Asignment/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="Module2Asst1.css">
+	<link rel="stylesheet" type="text/css" href="Module2Asignment/css.css">
 	<!--Google font link-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
